crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_empty.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "",
                    Tag,
                ),
                Nom(
                    "",
                    Alt,
                ),
                Nom(
                    "",
                    Alt,
                ),
                Nom(
                    "",
                    Alt,
                ),
            ],
        },
    ),
)
