crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_invalid.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "0",
                    Tag,
                ),
                Nom(
                    "0",
                    Alt,
                ),
                Nom(
                    "0",
                    Alt,
                ),
                Nom(
                    "0",
                    Alt,
                ),
            ],
        },
    ),
)
