crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_named_invalid.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUNN",
                    Tag,
                ),
                Nom(
                    "SUNN",
                    Alt,
                ),
                Nom(
                    "SUNN",
                    Alt,
                ),
                Nom(
                    "SUNN",
                    Alt,
                ),
            ],
        },
    ),
)
