crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_named_periodic_invalid.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN/8",
                    Tag,
                ),
                Nom(
                    "SUN/8",
                    Alt,
                ),
                Nom(
                    "SUN/8",
                    Alt,
                ),
                Nom(
                    "SUN/8",
                    Alt,
                ),
            ],
        },
    ),
)
