crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_range_periodic_invalid.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        8,
                    ),
                },
            ],
        },
    ),
)
